[project]
name = "qsimbench"
version = "0.1.1"
description = "QSimBench: An Execution-Level Benchmark Suite for Quantum Software Engineering"
readme = "README.md"
authors = [
    { name = "GBisi", email = "giuseppe.bisicchia@phd.unipi.it" }
]
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.0",
    "pillow>=12.0.0",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
